Fix: one-letter word wrap

--- a/app/scss/_loadout-builder.scss
+++ b/app/scss/_loadout-builder.scss
@@ -244,7 +244,7 @@
     position:relative;
     float: left;
     text-align: center;
-    width: calc(var(--item-size) + 10px);
+    width: calc(var(--item-size) + 15px);
 
     .empty-item {
       display: inline-block;
